--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -125,6 +125,15 @@
         <div id="root"></div>
     </div>
 
+    <!--
+        In-browser React JSX:
+        The UI files (app.jsx and components/*.jsx) are transpiled at runtime by Babel.
+        This is a simple way to demonstrate a React front-end without a build step.
+        The UI calls the backend API (api/policies) to load and cancel policies.
+    -->
+    <!-- Reusable Components -->
+    <script type="text/babel" src="components/CancelPolicyDialog.jsx"></script>
+
     <!-- App code -->
     <script type="text/babel" src="app.jsx"></script>
 
